--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,6 +35,33 @@
             @RenderBody()
         </main>
     </div>
+    <!--далее вставляем блоки из bootstrap     -->
+
+    <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
+    <p class="h5">Example heading <span class="badge text-bg-warning">New</span></p>
+
+
+@*     @{
+        foreach (var file in Model.GetAllFileAsync)
+        { *@
+            
+        <div class="d-flex text-body-secondary pt-3">
+        <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"></rect><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
+        <div class="pb-3 mb-0 small lh-sm border-bottom w-100">
+            <div class="d-flex justify-content-between">
+                <strong class="text-gray-dark">Full Name</strong>
+                <a href="#">Follow</a>
+            </div>
+            <span class="d-block">fgghhhhhhhh</span>
+        </div>
+    </div>
+@*         }
+    } *@
+
+@*     <p class="pb-3 mb-0 small lh-sm border-bottom">
+        <strong class="d-block text-gray-dark">@Model.GetFiles.</strong>
+        Some more representative placeholder content, related to this other user. Another status update, perhaps.
+    </p> *@
 
     <footer class="border-top footer text-muted">
         <div class="container">
