--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
     } *@
 
 <div class="row"> 
-    <div class="col-4"><button onclick="GetFiles()">загрузить</button></div>
+    <div class="col-4"><button onclick ="GetFiles()">загрузить</button></div>
     <div class="col-8">
         <<div>
             <input type="text" id="field1">
@@ -69,10 +69,10 @@
         }
         $("button").on("click", function (e) {
             e.preventDefault();
-            loadFiles();
+            GetFiles();
         });
 
-        function loadFiles() {
+        function GetFiles() {
             $.ajax("/api/file",
                 {
                     "dataType": "json",
