interface getFiles is ready

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
 
 <div class="d-flex text-body-secondary pt-3">
     <svg class="bd-placeholder-img flex-shrink-0 me-2 rounded" width="32" height="32" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 32x32" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#007bff"></rect><text x="50%" y="50%" fill="#007bff" dy=".3em">32x32</text></svg>
-    <div class="pb-3 mb-0 small lh-sm border-bottom w-100" id="files">
+    <div class="pb-3 mb-0 small lh-sm border-bottom w-100" id="file_list">
         <div class="d-flex justify-content-between">
             <strong class="text-gray-dark">Full Name</strong>
             <a href="#">Follow</a>
@@ -36,7 +36,7 @@
     } *@
 
 <div class="row"> 
-    <div class="col-4"><button onclick ="GetFiles()">загрузить</button></div>
+    <div class="col-4"><button id="load">загрузить</button></div>
     <div class="col-8">
         <<div>
             <input type="text" id="field1">
@@ -67,7 +67,7 @@
                 console.log(response);
             });
         }
-        $("button").on("click", function (e) {
+        $("#load").on("click", function (e) {
             e.preventDefault();
             GetFiles();
         });
@@ -79,10 +79,10 @@
                     "method": "GET"
                 })
                 .done(function (files) {
-                    const fileContainerDiv = $("#files");
+                    const fileContainerDiv = $("#file_list");
                     fileContainerDiv.empty();
                     for (const file of files) {
-                        const fileDiv = $("div");
+                        const fileDiv = $("<div>");
                         fileDiv.html(file.name);
                         fileDiv.attr("title", file.decription);
                         fileDiv.css("border", "1px solid green");
